added radio design

--- a/Shop/allfilters-page/app/index.html
+++ b/Shop/allfilters-page/app/index.html
@@ -1521,7 +1521,7 @@
                                         </div>
                                     </div>
                                     <div class="tab_content">
-                                        <ul class="param_list">
+                                        <ul class="param_list radio_list">
                                             <li class="checkbox">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_30">
                                                 <label for="checkbox_30">Да<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
@@ -1533,6 +1533,7 @@
                                                 </label>
                                             </li>
                                         </ul>
+
                                     </div>
                                 </div>
                                 <div class="section">
@@ -1825,12 +1826,12 @@
                                     <div class="tab_content">
                                         <ul class="param_list">
                                             <li class="checkbox">
-                                                <input type="radio" name="radio" class="checkbox_item" id="checkbox_241">
+                                                <input type="checkbox" class="checkbox_item" id="checkbox_241">
                                                 <label for="checkbox_241">от батареи<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
                                                 </label>
                                             </li>
                                             <li class="checkbox">
-                                                <input type="radio" name="radio" class="checkbox_item" id="checkbox_242">
+                                                <input type="checkbox" class="checkbox_item" id="checkbox_242">
                                                 <label for="checkbox_242">от сети<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
                                                 </label>
                                             </li>
@@ -1888,8 +1889,8 @@
                                         </div>
                                     </div>
                                     <div class="tab_content">
-                                        <ul class="param_list">
-                                            <li class="checkbox">
+                                        <ul class="param_list radio_list">
+                                            <li class="checkbox radio_list">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_261">
                                                 <label for="checkbox_261">Да<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
                                                 </label>
@@ -2200,7 +2201,7 @@
                                         </div>
                                     </div>
                                     <div class="tab_content">
-                                        <ul class="param_list">
+                                        <ul class="param_list radio_list">
                                             <li class="checkbox">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_351">
                                                 <label for="checkbox_351">Да<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
@@ -2230,7 +2231,7 @@
                                         </div>
                                     </div>
                                     <div class="tab_content">
-                                        <ul class="param_list">
+                                        <ul class="param_list radio_list">
                                             <li class="checkbox">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_361">
                                                 <label for="checkbox_361">Да<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
@@ -2262,7 +2263,7 @@
                                         </div>
                                     </div>
                                     <div class="tab_content">
-                                        <ul class="param_list">
+                                        <ul class="param_list radio_list">
                                             <li class="checkbox">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_401">
                                                 <label for="checkbox_401">Да<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
@@ -2292,7 +2293,7 @@
                                         </div>
                                     </div>
                                     <div class="tab_content">
-                                        <ul class="param_list">
+                                        <ul class="param_list radio_list">
                                             <li class="checkbox">
                                                 <input type="radio" name="radio" class="checkbox_item" id="checkbox_411">
                                                 <label for="checkbox_411">Да<span class="quantity_container">(<span class="quantity_value">40</span>)</span>
