--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -104,16 +104,13 @@
                             <li class="link_trigger link1"><a href="#">СОБЫТИЯ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger link2"><a href="#">ПАРТНЕРЫ</a>
+                            <li class="link_trigger link2"><a href="#">КОЛИЗЕИ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger link3"><a href="#">КОЛИЗЕИ</a>
+                            <li class="link_trigger link3"><a href="#">ГАЛЕРЕЯ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger link4"><a href="#">ГАЛЕРЕЯ</a>
-                                <div class="bg"></div>
-                            </li>
-                            <li class="link_trigger link5"><a href="#">УСЛУГИ И ЦЕНЫ</a>
+                            <li class="link_trigger link4"><a href="#">УСЛУГИ И ЦЕНЫ</a>
                                 <div class="bg"></div>
                             </li>
                         </ul>
@@ -360,9 +357,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <!--(пАРТНЕРЫ) Вторая страница Основного блока-->
-                        <div class="slide">
                         </div>
                         <!--(кОЛЕЗЕИ) Третья страница Основного блока-->
                         <div class="slide slide3">
@@ -618,6 +612,51 @@
                         </div>
                         <!--(УСЛУГИ И ЦЕНЫ) Пятая страница Основного блока-->
                         <div class="slide slide5">
+                             <span class="title"><span class="first">Игровое</span><span class="img"><img src="img/logos.png" alt="logo"></span><span class="time">время</span></span>
+                             <span class="table_title">СТОИМОСТЬ ОДНОГО ИГРОВОГО ЧАСА</span>
+                             <table class="table_top">
+                                 <tr class="top">
+                                     <td></td>
+                                     <td>10.00-16.00</td>
+                                     <td>16.00-0.00</td>
+                                     <td>00:00-10:00</td>
+                                     <td><span>Пакет <strong>« 1 / 2 Ночи »</strong></span><br>
+                                     22.00 - 4.00</td>
+                                     <td><span>Пакет <strong>«Ночь»</strong></span><br>
+                                     22.00 - 10.00</td>
+                                 </tr>
+                                 <tr class="center">
+                                     <td>PC 1070TI</td>
+                                     <td><span>80</span> ₽/час</td>
+                                     <td><span>120</span> ₽/час</td>
+                                     <td><span>120</span> ₽/час</td>
+                                     <td><span>400</span></td>
+                                     <td><span>600</span></td>
+                                 </tr>
+                                 <tr class="last">
+                                     <td>Аренда ТV</td>
+                                     <td><span>160</span> ₽/час</td>
+                                     <td><span>240</span> ₽/час</td>
+                                     <td><span>240</span> ₽/час</td>
+                                     <td><span>Free*</span></td>
+                                     <td><span>Free*</span></td>
+                                 </tr>
+                             </table>
+                             <span class="table_title">АРЕНДА VIP ROOM</span>
+                             <table class="table_bottom">
+                                 <tr class="top">
+                                     <td></td>
+                                     <td>10.00-16.00</td>
+                                     <td>16.00-0.00</td>
+                                     <td>00:00-10:00</td>
+                                 </tr>
+                                 <tr class="center">
+                                     <td></td>
+                                     <td><span>200</span> ₽/час</td>
+                                     <td><span>500</span> ₽/час</td>
+                                     <td><span>300</span> ₽/час</td>
+                                 </tr>
+                             </table>
                         </div>
                     </div>
                 </div>
@@ -628,7 +667,6 @@
                     <li class="dot dot2"><span></span></li>
                     <li class="dot dot3"><span></span></li>
                     <li class="dot dot4"><span></span></li>
-                    <li class="dot dot5"><span></span></li>
                     <span class="span_left">
                     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
                 </span>
