--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -676,6 +676,32 @@
                 </ul>
             </div>
         </div>
+        <div id="footer">
+            <div class="container">
+                <div class="content">
+                    <div class="left_block">
+                        <div class="logo"><a href="index.html"></a></div>
+                        <span class="txt">
+                            PLACE <br>
+                            TO PLAY <br>
+                            — <br>
+                            CYBER SPORT <br>
+                            arena
+                        </span>
+                    </div>
+                    <div class="right_block">
+                        <span class="txt">
+                            +7 917 557 60 07<br> 
+                            www.cybersportarena.com<br>
+                            —<br>
+                            CSA 2018 ©<br>
+                            All rights reserved
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <span class="line_bottom"></span>
+        </div>
     </div>
     <!--Sripts-->
     <script src="libs/jquery/dist/jquery.min.js"></script>
