--- a/Shop/allfilters-page/app/index.html
+++ b/Shop/allfilters-page/app/index.html
@@ -2246,7 +2246,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="filter fil2">
+                            <div class="filter fil2 last_filter">
                                 <div class="section">
                                     <div class="tab_title">
                                         <button class="open_button"></button>
