--- a/Shop/brand-collections-page/app/index.html
+++ b/Shop/brand-collections-page/app/index.html
@@ -9,6 +9,7 @@
     <meta content="telephone=no" name="format-detection">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/jscrollpane.css" media="all">
+    <link rel="stylesheet" type="text/css" href="css/nanoscroller.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/slick.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/balloon.css" media="all">
     <link rel="stylesheet" type="text/css" href="css/select2.css" media="all">
@@ -1234,6 +1235,21 @@
             	 	   	   </div>
             	 	   </div>
             	 </div>
+            </div>
+            <div class="brand_categories_block">
+                <div class="container">
+                    <div class="categories_nav scroll-pane">
+                        <ul class="categories_list">
+                            <li><a href="#">Теплые полы</a></li>
+                            <li><a href="#">Теплые полы</a></li>
+                            <li><a href="#">Теплые полы</a></li>
+                            <li><a href="#">Теплые полы</a></li>
+                            <li><a href="#">Теплые полы</a></li>
+                            <li><a href="#">Теплые полы</a></li>
+                            <li><a href="#">Теплые полы</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer">
