--- a/Shop/brand-collections-page/app/index.html
+++ b/Shop/brand-collections-page/app/index.html
@@ -1238,16 +1238,118 @@
             </div>
             <div class="brand_categories_block">
                 <div class="container">
-                    <div class="categories_nav scroll-pane">
+                    <div class="categories_nav">
                         <ul class="categories_list">
-                            <li><a href="#">Теплые полы</a></li>
-                            <li><a href="#">Теплые полы</a></li>
-                            <li><a href="#">Теплые полы</a></li>
-                            <li><a href="#">Теплые полы</a></li>
-                            <li><a href="#">Теплые полы</a></li>
-                            <li><a href="#">Теплые полы</a></li>
-                            <li><a href="#">Теплые полы</a></li>
+                            <li class="active_nav_link"><a href="#"><span>Все</span></a></li>
+                            <li><a href="#"><span>Люки сантехнические</span></a></li>
+                            <li><a href="#"><span>Сифоны</span></a></li>
+                            <li><a href="#"><span>Тумбы</span></a></li>
+                            <li><a href="#"><span>Светильники</span></a></li>
+                            <li><a href="#"><span>Мебель для ванной</span></a></li>
+                            <li><a href="#"><span>Душевые кабины</span></a></li>
+                            <li><a href="#"><span>Электроинструмент</span></a></li>
+                            <li><a href="#"><span>Чугунные ванны</span></a></li>
+                            <li><a href="#"><span>Тумбы</span></a></li>
+                            <li><a href="#"><span>Светильники</span></a></li>
                         </ul>
+                    </div>
+                    <div class="content_categories">
+                        <div class="tab_content">
+                        <div class="top_cards row">
+                            <div class="slider-item-container col-lg-3">
+                                <div class="slider-item">
+                                        <a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
+                                        <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                        <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-3">
+                                <div class="slider-item">
+                                            <a href="#"><img src="images/content/item5.jpg" alt=""></a>
+                                            <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-3">
+                                <div class="slider-item">
+                                            <a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
+                                            <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-3">
+                                <div class="slider-item">
+                                            <a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
+                                            <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                            <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            </div>
+                        </div> 
+                        <div class="additional_cards row">
+                            <div class="slider-item-container col-lg-2">
+                                <div class="slider-item">
+                                        <a href="#"><img src="images/content/slider-item1.jpg" alt=""></a>
+                                        <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                        <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-2">
+                                <div class="slider-item">
+                                        <a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
+                                        <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                        <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-2">
+                                <div class="slider-item">
+                                        <a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
+                                        <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                        <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-2">
+                                <div class="slider-item">
+                                        <a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
+                                        <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                        <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-2">
+                                <div class="slider-item">
+                                        <a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
+                                        <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                        <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="slider-item-container col-lg-2">
+                                <div class="slider-item">
+                                        <a href="#"><img src="images/content/slider-item2.jpg" alt=""></a>
+                                        <span class="item-price">7 910 <span class="rub">руб.</span></span>
+                                        <span class="slider-item-more">
+                                        <a class="item-link" href="#"><p>Чугунная ванна Aqualux Delafon Cleo / Revival</p></a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
