--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -110,9 +110,6 @@
                             <li class="link_trigger link3"><a href="#">ГАЛЕРЕЯ</a>
                                 <div class="bg"></div>
                             </li>
-                            <li class="link_trigger link4"><a href="#">УСЛУГИ И ЦЕНЫ</a>
-                                <div class="bg"></div>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -382,6 +379,7 @@
                                             <div class="links">
                                                 <a href="#"><img src="img/vk_icon.svg" alt="vk"></a>
                                                 <a href="#"><img src="img/insta_icon.svg" alt="inst"></a>
+                                                <a class="prices" target="_blank" href="prices/price1.pdf">Цены</a>
                                             </div>
                                         </div>
                                         <span class="indicator"></span>
@@ -406,6 +404,7 @@
                                             <div class="links">
                                                 <a href="#"><img src="img/vk_icon.svg" alt="vk"></a>
                                                 <a href="#"><img src="img/insta_icon.svg" alt="inst"></a>
+                                                <a class="prices" target="_blank" href="prices/price2.pdf">Цены</a>
                                             </div>
                                         </div>
                                         <span class="indicator"></span>
@@ -429,6 +428,7 @@
                                             <div class="links">
                                                 <a href="#"><img src="img/vk_icon.svg" alt="vk"></a>
                                                 <a href="#"><img src="img/insta_icon.svg" alt="inst"></a>
+                                                <a class="prices" target="_blank" href="prices/price3.pdf">Цены</a>
                                             </div>
                                         </div>
                                         <span class="indicator"></span>
@@ -449,27 +449,30 @@
                                             <span class="btn_left btn_left1"></span>
                                             <span class="btn_right btn_right1"></span>
                                             <div class="place_slider_1">
-                                                <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
-                                                <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
-                                                <div class="photo"><img src="img/photo1.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/tula_stage1.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/tula_stage2.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/tula_stage3.jpg" alt="photo"></div>
                                             </div>
                                         </div>
                                         <div class="slide_content">
                                             <span class="btn_left btn_left2"></span>
                                             <span class="btn_right btn_right2"></span>
                                             <div class="place_slider_2">
-                                                <div class="photo"><img src="img/photo2.jpg" alt="photo"></div>
-                                                <div class="photo"><img src="img/photo2.jpg" alt="photo"></div>
-                                                <div class="photo"><img src="img/photo2.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/belyaevo_stage1.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/belyaevo_stage2.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/belyaevo_stage3.jpg" alt="photo"></div>
                                             </div>
                                         </div>
                                         <div class="slide_content">
                                             <span class="btn_left btn_left3"></span>
                                             <span class="btn_right btn_right3"></span>
+                                            <span class="soon_banner"></span>
                                             <div class="place_slider_3">
-                                                <div class="photo"><img src="img/photo3.jpg" alt="photo"></div>
-                                                <div class="photo"><img src="img/photo3.jpg" alt="photo"></div>
-                                                <div class="photo"><img src="img/photo3.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/columbus_stage1.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/columbus_stage2.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/columbus_stage3.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/columbus_stage4.jpg" alt="photo"></div>
+                                                <div class="photo"><img src="img/clz_banner_images/columbus_stage5.jpg" alt="photo"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -610,54 +613,6 @@
                             </div>
                             <span class="btn_bottom"></span>
                         </div>
-                        <!--(УСЛУГИ И ЦЕНЫ) Пятая страница Основного блока-->
-                        <div class="slide slide5">
-                             <span class="title"><span class="first">Игровое</span><span class="img"><img src="img/logos.png" alt="logo"></span><span class="time">время</span></span>
-                             <span class="table_title">СТОИМОСТЬ ОДНОГО ИГРОВОГО ЧАСА</span>
-                             <table class="table_top">
-                                 <tr class="top">
-                                     <td></td>
-                                     <td>10.00-16.00</td>
-                                     <td>16.00-0.00</td>
-                                     <td>00:00-10:00</td>
-                                     <td><span>Пакет <strong>« 1 / 2 Ночи »</strong></span><br>
-                                     22.00 - 4.00</td>
-                                     <td><span>Пакет <strong>«Ночь»</strong></span><br>
-                                     22.00 - 10.00</td>
-                                 </tr>
-                                 <tr class="center">
-                                     <td>PC 1070TI</td>
-                                     <td><span>80</span> ₽/час</td>
-                                     <td><span>120</span> ₽/час</td>
-                                     <td><span>120</span> ₽/час</td>
-                                     <td><span>400</span></td>
-                                     <td><span>600</span></td>
-                                 </tr>
-                                 <tr class="last">
-                                     <td>Аренда ТV</td>
-                                     <td><span>160</span> ₽/час</td>
-                                     <td><span>240</span> ₽/час</td>
-                                     <td><span>240</span> ₽/час</td>
-                                     <td><span>Free*</span></td>
-                                     <td><span>Free*</span></td>
-                                 </tr>
-                             </table>
-                             <span class="table_title">АРЕНДА VIP ROOM</span>
-                             <table class="table_bottom">
-                                 <tr class="top">
-                                     <td></td>
-                                     <td>10.00-16.00</td>
-                                     <td>16.00-0.00</td>
-                                     <td>00:00-10:00</td>
-                                 </tr>
-                                 <tr class="center">
-                                     <td></td>
-                                     <td><span>200</span> ₽/час</td>
-                                     <td><span>500</span> ₽/час</td>
-                                     <td><span>300</span> ₽/час</td>
-                                 </tr>
-                             </table>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -666,7 +621,6 @@
                     <li class="dot dot1"><span></span></li>
                     <li class="dot dot2"><span></span></li>
                     <li class="dot dot3"><span></span></li>
-                    <li class="dot dot4"><span></span></li>
                     <span class="span_left">
                     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
                 </span>
