--- a/portfolio/CSA/app/index.html
+++ b/portfolio/CSA/app/index.html
@@ -18,13 +18,13 @@
     <div id="wrapper">
         <div id="mobile_nav">
             <ul>
-                <li class="link_trigger link1"><a href="#">СОБЫТИЯ</a>
+                <li class="link_trigger link1"><a href="#home_page">О НАС</a>
                 </li>
-                <li class="link_trigger link2"><a href="#">ПАРТНЕРЫ</a>
+                <li class="link_trigger link2"><a href="#slide1">СОБЫТИЯ</a>
                 </li>
-                <li class="link_trigger link3"><a href="#">СТАТИСТИКА</a>
+                <li class="link_trigger link3"><a href="#slide2">КОЛИЗЕИ</a>
                 </li>
-                <li class="link_trigger link4"><a href="#">ГАЛЕРЕЯ</a>
+                <li class="link_trigger link4"><a href="#slide3">ГАЛЕРЕЯ</a>
                 </li>
                 <div class="icons_block">
                     <div class="link1 link_trigger">
@@ -331,7 +331,8 @@
                 <div class="slider_content">
                     <div class="slider2">
                         <!--(НОВОСТИ_1) Первая страница Основного блока-->
-                        <div class="slide slide1">
+                        <div id="slide1" class="slide slide1">
+                            <span class="title">События</span>
                             <span class="arrow_left_slide1"></span>
                             <span class="arrow_right_slide1"></span>
                             <span class="bottom">
@@ -356,7 +357,8 @@
                             </div>
                         </div>
                         <!--(кОЛЕЗЕИ) Третья страница Основного блока-->
-                        <div class="slide slide3">
+                        <div id="slide2" class="slide slide3">
+                            <span class="title">Колизеи</span>
                             <div class="tab_item">
                                 <div class="content">
                                     <div class="place_block active_place">
@@ -371,7 +373,7 @@
                                             </div>
                                         </div>
                                         <div class="description_block">
-                                            <span class="title">Colizeum <span>TULA</span></span>
+                                            <span class="title_place">Colizeum <span>TULA</span></span>
                                             <span class="adress"><span>/// ТУЛА</span>
                                             <br>ул. Каминского, д. 24В
                                             <br>ТЦ «Тройка»
@@ -396,7 +398,7 @@
                                             </div>
                                         </div>
                                         <div class="description_block">
-                                            <span class="title">Colizeum <span>BELYAEVO</span></span>
+                                            <span class="title_place">Colizeum <span>BELYAEVO</span></span>
                                             <span class="adress"><span>/// Москва</span>
                                             <br>Беляево
                                             <br>ул. Профсоюзная, д. 104
@@ -420,7 +422,7 @@
                                             </div>
                                         </div>
                                         <div class="description_block">
-                                            <span class="title">Colizeum <span>colambus</span></span>
+                                            <span class="title_place">Colizeum <span>colambus</span></span>
                                             <span class="adress"><span>/// Москва</span>
                                             <br>Пражская
                                             <br>ул. Кировоградская, д. 13A
@@ -480,7 +482,8 @@
                             </div>
                         </div>
                         <!--(КАРТА)Четвертая страница Основного блока-->
-                        <div class="slide slide4">
+                        <div id="slide3" class="slide slide4">
+                            <span class="title">Фотогалерея</span>
                             <div class="slider_gallery">
                                 <div class="slide slide_first">
                                     <div class="block_left">
